Bug 1034258 - Change mCompositionBounds to be a ParentLayerRect instead of a ParentLayerIntRect. r=Cwiiis